--- a/briank-gitops/availabilitytarget-azure-dev.yaml
+++ b/briank-gitops/availabilitytarget-azure-dev.yaml
@@ -1,16 +1,14 @@
 apiVersion: spaces.tanzu.vmware.com/v1alpha1
 kind: AvailabilityTarget
 metadata:
-  name: kirkware-azure-client-1-dev
-  description: Availability Target for - azure - client-1 - dev
+  name: kirkware-azure-dev
+  description: Availability Target for - azure - dev
   namespace: default
 spec:
   affinity:
     clusterAffinity:
       clusterSelectorTerms:
       - matchExpressions:
-        - key: kirkware-client-1
-          operator: Exists
         - key: kirkware-azure
           operator: Exists
         - key: kirkware-dev
