--- a/briank-gitops/network-profile.yaml
+++ b/briank-gitops/network-profile.yaml
@@ -4,9 +4,13 @@ metadata:
   name: kirkware-network-profile
 spec:
   description: kirkware networking setup
+  requiredCapabilities:
+    - name: egress.tanzu.vmware.com
+  #  - name: multicloud-cert-manager.tanzu.vmware.com
+  #  - name: multicloud-ingress.tanzu.vmware.com
   traits:
-  - name: egress.tanzu.vmware.com
-    alias: egress
+  # - name: egress.tanzu.vmware.com
+  #   alias: egress
   - name: multicloud-cert-manager.tanzu.vmware.com
     alias: multicloud-cert-manager
   - name: multicloud-ingress.tanzu.vmware.com
@@ -18,7 +22,7 @@ spec:
           domain: kirkware.net
           gslb:
             authentication:
-              credentialRef: 34893c905e549dc66cbe4addb8eb3783
+              credentialRef: a4b1028b3c191e497ad000c9ba5e3fce
             dns:
               zoneId: Z0523123KKDB67R7F352
           listenerTemplates:
