--- a/briank-gitops/space-kw-music-prod-t1.yaml
+++ b/briank-gitops/space-kw-music-prod-t1.yaml
@@ -1,19 +1,19 @@
 apiVersion: spaces.tanzu.vmware.com/v1alpha1
 kind: Space
 metadata:
-  name: kw-spring-ai-dev
+  name: kw-music-prod-t1
 spec:
   template:
     spec:
       profiles:
-      - name: spring-dev.tanzu.vmware.com
+      - name: spring-dev-simple
       - name: kirkware-network-profile
       resources:
         limits:
           cpu: "5"
           memory: 10Gi
   availabilityTargets:
-  - name: kirkware-vsphere-dev
+  - name: kirkware-vsphere-prod-t1
     replicas: 1
   updateStrategy:
     type: RollingUpdate
