--- a/briank-gitops/space-kw-jenkins-dev.yaml
+++ b/briank-gitops/space-kw-jenkins-dev.yaml
@@ -1,19 +1,20 @@
 apiVersion: spaces.tanzu.vmware.com/v1alpha1
 kind: Space
 metadata:
-  name: kw-music-dev
+  name: kw-jenkins-dev
 spec:
   template:
     spec:
       profiles:
-      - name: spring-dev-simple
+      - name: flux-helm-profile
+      - name: spring-dev.tanzu.vmware.com
       - name: kirkware-network-profile
       resources:
         limits:
           cpu: "5"
           memory: 10Gi
   availabilityTargets:
-  - name: kirkware-azure-dev
+  - name: kirkware-vsphere-dev
     replicas: 1
   updateStrategy:
     type: RollingUpdate
