--- a/briank-gitops/space-kw-music-dev.yaml
+++ b/briank-gitops/space-kw-music-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: spaces.tanzu.vmware.com/v1alpha1
 kind: Space
 metadata:
-  name: kw-wfd-dev
+  name: kw-music-dev
 spec:
   template:
     spec:
@@ -14,8 +14,6 @@ spec:
           memory: 10Gi
   availabilityTargets:
   - name: kirkware-vsphere-dev
-    replicas: 0
-  - name: kirkware-azure-dev
     replicas: 1
   updateStrategy:
     type: RollingUpdate
