--- a/briank-gitops/spaces/kw-metal-dev/metal-egresspoint.yaml
+++ b/briank-gitops/spaces/kw-metal-dev/metal-egresspoint.yaml
@@ -7,10 +7,10 @@ spec:
   - hosts:
     - spring-ai-db-yjhhm2q0zj-tanzu.tdh.kirkware.net
     port:
-      number: "5432"
+      number: 5432
       protocol: TCP
   - hosts:
     - api.openai.com
     port:
-      number: "443"
+      number: 443
       protocol: HTTPS
