--- a/briank-gitops/space-kw-metal-dev.yaml
+++ b/briank-gitops/space-kw-metal-dev.yaml
@@ -14,6 +14,10 @@ spec:
           memory: 10Gi
   availabilityTargets:
   - name: kirkware-vsphere-dev
+    replicas: 0
+  - name: kirkware-aws-dev
+    replicas: 0
+  - name: kirkware-azure-dev
     replicas: 1
   updateStrategy:
     type: RollingUpdate
