--- a/pipelines/tanzu-deploy-pipeline.yaml
+++ b/pipelines/tanzu-deploy-pipeline.yaml
@@ -56,6 +56,12 @@ steps:
       echo tanzu build config --build-plan-source-type=ucp --containerapp-registry $CONTAINERREGISTRY --build-plan-source $BUILDPLANSOURCE
       tanzu build config --build-plan-source-type=ucp --containerapp-registry $CONTAINERREGISTRY --build-plan-source $BUILDPLANSOURCE
 
+      echo tanzu project list
+      tanzu project list
+
+      echo tanzu context current
+      tanzu context current
+
       echo tanzu project use $PROJECT
       tanzu project use $PROJECT
 
