--- a/briank-gitops/clustergroups/kirkware-dev/pkgi.yaml
+++ b/briank-gitops/clustergroups/kirkware-dev/pkgi.yaml
@@ -255,29 +255,11 @@ apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
   creationTimestamp: null
-  name: fluxcd-helm-controller.tanzu.vmware.com
+  name: ingress.tanzu.vmware.com
   namespace: default
 spec:
   packageRef:
-    refName: fluxcd-helm-controller.tanzu.vmware.com
-    versionSelection:
-      constraints: '>0.0.0'
-      prereleases: {}
-  serviceAccountName: default
-status:
-  conditions: null
-  friendlyDescription: ""
-  observedGeneration: 0
----
-apiVersion: packaging.carvel.dev/v1alpha1
-kind: PackageInstall
-metadata:
-  creationTimestamp: null
-  name: fluxcd-source-controller.tanzu.vmware.com
-  namespace: default
-spec:
-  packageRef:
-    refName: fluxcd-source-controller.tanzu.vmware.com
+    refName: ingress.tanzu.vmware.com
     versionSelection:
       constraints: '>0.0.0'
       prereleases: {}
